# rustcp

./: README.md
rest_api/: .gitignore  Cargo.toml
rest_api/src/: routes.rs
rest_api/src/model/: mod.rs
rest_api_rocket/data/: movies.json
rest_api_rocket/src/: bin.rs  lib.rs
rest_api_rocket/src/db/: mod.rs
